# MSRA_Coding_Challenge

./: CMakeLists.txt  README.md  bilateral_filter.cpp
write-up/: fig1.eps  fig2.eps  fig3.eps  fig4.eps  test.eps  write-up.tex
