cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(bilateral_filter)
find_package(OpenCV REQUIRED)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS} .)
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(bilateral_filter bilateral_filter.cpp)
target_link_libraries(bilateral_filter ${OpenCV_LIBS})
target_link_libraries(bilateral_filter ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES} ${PCL_LIBRARIES})
